# plant-pal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: models.yaml
src/app/: main.py
src/app/controller/: exceptions.py  state.py  validations.py
src/app/models/: __init__.py  messages.py  responses.py  session.py
src/app/routers/: __init__.py  chat.py  health.py  sessions.py
src/llm/: client.py
src/settings/: logger.py  settings.py
src/utils/: image_documents.py
src/workflows/: events.py  prompts.py  workflow.py
src/workflows/agents/: __init__.py
src/workflows/agents/plant_care/: agent.py
src/workflows/agents/plant_recognition/: agent.py
src/workflows/agents/router/: agent.py
src/workflows/tools/: __init__.py  recognize_plant.py  web_search.py
